--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,5 +17,10 @@ spec:
       containers:
         - name: nginx
           image: nginx:latest
+          resources:
+            limits:
+              memory: "500Mi"
+            requests:
+              memory: "500Mi"
           ports:
             - containerPort: 80
